--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "node":"node_modules/.bin/nodemon ./server/server.js"
+    "node": "node_modules/.bin/nodemon ./server/server.js",
+    "mongoose":"mongod --dbpath  D://Code/DataBase/MongoDataBase"
   },
   "jest": {
     "collectCoverageFrom": [
