--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
+    "utility": "^1.13.1",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
@@ -61,7 +62,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "node": "node_modules/.bin/nodemon ./server/server.js",
-    "mongoose":"mongod --dbpath  D://Code/DataBase/MongoDataBase"
+    "mongoose": "mongod --dbpath  D://Code/DataBase/MongoDataBase"
   },
   "jest": {
     "collectCoverageFrom": [
