--- a/package.json
+++ b/package.json
@@ -118,7 +118,10 @@
     ]
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules":{
+      "jsx-a11y/accessible-emoji":["off"]
+    }
   },
   "proxy": "http://localhost:9093"
 }
